feat: 日本語化対応とCORSエラー修正
フロントエンドの表示テキストを日本語化
API呼び出しのパスを修正し、CORSエラーを解消
CORSエラーの再発防止のための教訓をまとめたCORS_lessons_learned.mdを追加

--- a/Patient-handoff/frontend/Dockerfile
+++ b/Patient-handoff/frontend/Dockerfile
@@ -11,7 +11,7 @@ COPY . .
 ARG VITE_BACKEND_URL
 ENV VITE_BACKEND_URL=$VITE_BACKEND_URL
 
-RUN npm run build
+RUN sh -c "VITE_BACKEND_URL=${VITE_BACKEND_URL} npm run build"
 
 # Stage 2: Serve the React application with Node.js/Express
 FROM node:20-alpine
